// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs/rules/doctype-html.md inline validation: correct 1`] = `[]`;

exports[`docs/rules/doctype-html.md inline validation: incorrect 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 11,
        "line": 1,
        "message": "doctype should be "html"",
        "offset": 10,
        "ruleId": "doctype-html",
        "ruleUrl": "https://html-validate.org/rules/doctype-html.html",
        "selector": null,
        "severity": 2,
        "size": 79,
      },
    ],
    "source": "<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/doctype-html.md inline validation: legacy 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 11,
        "line": 1,
        "message": "doctype should be "html"",
        "offset": 10,
        "ruleId": "doctype-html",
        "ruleUrl": "https://html-validate.org/rules/doctype-html.html",
        "selector": null,
        "severity": 2,
        "size": 33,
      },
    ],
    "source": "<!DOCTYPE html SYSTEM "about:legacy-compat">",
    "warningCount": 0,
  },
]
`;
